<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Developers Chat</string>
    <string name="type_your_message">Type a message</string>
    <string name="NoRecent">No recent</string>
    <string name="action_setting">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_refresh_group">Refresh View</string>
    <string name="action_refresh_topic">Refresh View</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chit_chat">Chat</string>

    <!-- Menu Strings -->
    <string name="action_logout">Logout</string>
    <string name="action_share_list">Share List</string>
    <string name="action_remove_list">Remove Group</string>
    <string name="action_remove_topic">Remove Topic</string>
    <string name="action_remove_group">Remove Group</string>
    <string name="action_archive">Archive</string>

    <!-- Menu Items -->
    <string name="action_edit_topic_name">Edit Topic name</string>
    <string name="action_edit_group_name">Edit Group name</string>
    <string name="action_upload_file">Upload file</string>
    <string name="action_set_status">Set new status</string>
    <string name="action_share">Share</string>
    <string name="action_clear">Clear conversation</string>
    <string name="action_copy">Copy</string>
    <string name="action_record">Record video</string>
    <string name="action_capture">Capture image</string>
    <string name="action_audio">Record audio</string>
    <string name="action_view_contact">View contact</string>
    <string name="action_view_forum">View details</string>

    <!-- Edit and Add Group Dialogs -->
    <string name="positive_button_add_group">Add new group</string>
    <string name="positive_button_edit_group">Edit group name</string>
    <string name="action_sort_groups">Sort</string>
    <string name="negative_button_cancel">Cancel</string>
    <string name="dialog_message_are_you_sure_remove_group">Are you sure you want to delete this group?</string>


    <!-- Edit and Add Topic Dialogs -->
    <string name="positive_button_add_topic">Add new topic</string>
    <string name="positive_button_edit_topic">Edit topic name</string>
    <string name="action_sort_topics">Sort</string>
    <string name="negative_button_cancel_edit">Cancel</string>
    <string name="dialog_message_are_you_sure_remove_topic">Are you sure you want to delete this topic?</string>

    <string name="created_by">Created by </string>


    <string name="remove_item_option">Remove Item</string>
    <string name="positive_button_create">Create</string>


    <string name="person_shopping">%d person shopping</string>
    <string name="people_shopping">%d people shopping</string>

    <string name="log_error_the_read_failed">The read failed: </string>


    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <string name="nav_chats">Chats</string>
    <string name="nav_groups">Groups</string>
    <string name="nav_topics">Topics</string>
    <string name="nav_users">Active Users</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_feedback">Send feedback</string>

    <!-- Toolbar titles when navigation menu is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Groups</item>
        <item>Topics</item>
        <item>Chats</item>
        <item>Active Users</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About US</string>
    <string name="action_clear_all">Clear All</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>


    <!-- upload -->
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="about_info">This app is for supporting the community of developers, enabling them to reconnect, quickly look for and provide solutions. Dicussions about various subjects to forming groups where one can identify with are all in the app. There is also the one to one chat with a specific developer.</string>

</resources>
