<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/nav_groups" />
        <item
            android:id="@+id/nav_topics"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_topics" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/nav_chats" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/nav_users" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_perm_data_setting_black_24dp"
            android:title="@string/nav_settings" />
    </group>
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/nav_feedback" />
        </menu>
    </item>

</menu>